# mlflow_project

./: .gitignore  pyproject.toml  requirements.txt
eda/: notebook.ipynb
